# fitzpatrick-lab-mpfi-collaboration

./: .gitignore  pixi.toml  pyproject.toml
scripts/: process_data.py
