[project]
authors = [
    { name = "phildong", email = "35715936+phildong@users.noreply.github.com" },
]
dependencies = [
    "napari[pyqt5]>=0.6.6,<0.7",
    "bioio>=3.0.0,<4",
    "bioio-bioformats>=1.3.1,<2",
    "scipy>=1.16.3,<2",
    "scikit-image>=0.26.0,<0.27",
    "magicgui[pyqt5]>=0.10.1,<0.11",
]
name = "fitzpatrick-sted"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fitzpatrick_sted = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
scyjava = ">=1.12.1,<2"
